--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,20 @@ before_install:
 - cp /usr/lib/python2.7/dist-packages/fontforge.* "$HOME/virtualenv/python2.7.8/lib/python2.7/site-packages"
 install:
 - pip install git+https://github.com/behdad/fontTools.git
+- pip install git+https://github.com/googlefonts/fontcrunch.git
 - pip install git+https://github.com/googlefonts/fontbakery-cli.git
 - pip install jinja2
-script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery.py .
+before_script:
+- mkdir -p builds/build
+script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery.py . | tee builds/build/build.log
 branches:
   only:
   - master
 after_script:
-- rm -rf builds/build/sources builds/build/build.state.yaml
 - PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH bakery-report.py builds/build
+- rm -rf builds/build/sources
+- rm -rf builds/build/build.state.yaml
 - PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH travis-deploy.py
 env:
   global:
-    secure: E4HMsGVrpMLQmjzyv/5KIMzD/0HvU0+iJZlbZ9apJDJh8fRIV08D0dKyP4/o9R+r3i8xZziZvMU7vl0DLcGz6C80QOezcSjAjggkmKIdCVjvAe65I7scEUCxwAwtvS+hE/DpXlPSt1rkDTcuLn8LbeLgbCUYzZ6LXlnL0OZCGpE=
+    secure: VhM54AeZs2rT/jkgcgCwbjU8wr/DUMW9Cj5EIKL/FH+nbuCL68BriUHJatoLxPXdqCtSypp8aWBx5plfkk4w13P8NhPGoOGiifGe9ts0DZFsvcZmL5G1OLvw3ET/637pNqBysu/NiNjXGHVwPPNfOtFhDfAbETKZD9nEIoIjnVA=
